# productivity-tracker

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
aws/: lambda-function.js  lambda-policy.json
docs/: DOCS.md  README.md
src/: app.js  config.example.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
