[package]
name = "productivity-tracker"
version = "1.0.0"
description = "A lightweight productivity tracker with Pomodoro timer, AWS sync, and AI insights"
authors = ["Alessio Ferrari"]
license = "MIT"
repository = "https://github.com/tuttofaredigitale/productivity-tracker.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
